--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ div {
     display: inline-block;
 }
 
-span {
-    width: 200px;
+.span {
     height: 100px;
+    width: 200px;
     background-color: yellow;
 }
