--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ div {
     display: inline-block;
 }
 
-.span {
+span {
     height: 100px;
     width: 200px;
     background-color: yellow;
+    display: block;
 }
