--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,17 @@
     background-color: darkturquoise;
     height: 40px;
     position: fixed;
+    top: 0;
     width: 100%;
+    z-index: 1;
 }
 
 .nav-item {
     height: 40px;
-    display: inline-block;
+    float: left;
     color: white;
     margin-left: 16px;
+    display: inline;
     position: relative;
     bottom: 5px;
 }
