--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,10 @@
 
 .nav-item {
     height: 40px;
+    float: left;
     color: white;
     margin-left: 16px;
-    display: inline-block;
+    display: inline;
     position: relative;
     bottom: 5px;
 }
