--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,11 @@
 .nav-item {
     height: 40px;
     color: white;
-    display: inline-block;
+    float: left;
+    display: inline;
     margin-left: 16px;
     position: relative;
-    bottom: 5px;
+    bottom: 7px;
 }
 
 .content {
