--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
+* {
+    box-sizing: border-box;
+}
+
 .header {
     background-color: darkturquoise;
     height: 40px;
     position: fixed;
     width: 100%;
     z-index: 1;
+    clear: both;
 }
 
 .nav-item {
@@ -13,6 +18,7 @@
     margin-left: 16px;
     position: relative;
     bottom: 5px;
+    clear: both;
 }
 
 .content {
