--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 .nav-item {
     height: 40px;
     color: white;
-    display: inline-block;
+    display: inline;
     margin-left: 16px;
     position: relative;
     bottom: 5px;
