--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 .nav-item {
     height: 40px;
     color: white;
+    float: left;
     display: inline;
     margin-left: 16px;
     position: relative;
