--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,9 @@
     background-color: darkturquoise;
     height: 40px;
     position: fixed;
+    top: 0;
     width: 100%;
     z-index: 1;
-    clear: both;
 }
 
 .nav-item {
@@ -19,13 +19,11 @@
     margin-left: 16px;
     position: relative;
     bottom: 5px;
-    clear: both;
 }
 
 .content {
     height: 5000px;
     background-color: beige;
-    clear: both;
 }
 
 .head {
