--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-/* * {
-    box-sizing: content-box;
-} */
-
 .header {
     background-color: darkturquoise;
     height: 40px;
@@ -17,8 +13,7 @@
     float: left;
     display: inline;
     margin-left: 16px;
-    position: relative;
-    bottom: 5px;
+    line-height: 5px;
 }
 
 .content {
