--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,11 @@
 
 .nav-item {
     margin-left: 16px;
-    display: inline-block;
+    display: inline;
     line-height: 40px;
     height: 40px;
     position: relative;
-    bottom: 18px;
+    bottom: 16px;
 }
 
 .nav-list {
