--- a/styles.css
+++ b/styles.css
@@ -1,76 +1,14 @@
-.header {
-    background-color: darkturquoise;
-    height: 40px;
-    position: fixed;
-    width: 100%;
-    z-index: 1;
+.horizontal {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
-.nav-item {
-    margin-left: 16px;
-    display: inline;
-    line-height: 40px;
-    height: 40px;
-    position: relative;
-    bottom: 16px;
-    float: left;
-}
-
-.nav-list {
-    color: white;
-}
-
-.content {
-    height: 5000px;
-    background-color: beige;
-}
-
-.head {
-    width: 200px;
+.vertical {
     height: 200px;
-    background-color: aquamarine;
-    position: absolute;
-    top: calc(50% - 100px);
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-}
-
-.ear {
-    height: 60px;
-    width: 40px;
-    background-color: brown;
-    position: relative;
-    bottom: 60px;
-    float: left;
-}
-
-.eye {
-    border-radius: 100%;
-    height: 30px;
-    width: 30px;
-    background-color: grey;
-    float: left;
-    position: relative;
-    top: 80px;
-}
-
-.ear_right {
-    position: relative;
-    right: 40px;
-}
-
-.ear_left {
-    position: relative;
-    left: 160px;
-}
-
-.eye_right {
-    position: relative;
-    right: 40px;
-}
-
-.eye_left {
-    position: relative;
-    left: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
 }
