--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/* * {
+    box-sizing: border-box;
+} */
+
 .header {
     display: flex;
     justify-content: center;
@@ -9,14 +13,12 @@
     margin: 8px;
     padding: 16px;
     background-color: bisque;
-    width: 300px;
     flex-grow: 1;
     flex-shrink: 0;
+    width: 300px;
 }
 
 .articles-list {
     display: flex;
     flex-wrap: wrap;
-    margin: 0;
-    box-sizing: border-box;
 }
