--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,11 @@
     flex-shrink: 0;
     width: 300px;
     box-sizing: border-box;
-    margin-bottom: 16px;
 }
 
 .articles-list {
     display: flex;
     flex-wrap: wrap;
+    margin: 0;
+    height: 100vh;
 }
