--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
     background-color: bisque;
     flex-grow: 1;
     flex-shrink: 0;
-    width: 300px;
+    flex-basis: 300px;
     box-sizing: border-box;
 }
 
@@ -19,5 +19,4 @@
     display: flex;
     flex-wrap: wrap;
     margin: 0;
-    height: 100vh;
 }
