--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .header {
     display: flex;
     justify-content: center;
@@ -11,12 +15,10 @@
     background-color: bisque;
     flex-grow: 1;
     flex-shrink: 0;
-    flex-basis: 300px;
-    box-sizing: border-box;
+    width: 300px;
 }
 
 .articles-list {
     display: flex;
     flex-wrap: wrap;
-    margin: 0;
 }
