--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,7 @@
 }
 
 .header {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
+    text-align: center;
 }
 
 .article {
@@ -21,5 +18,4 @@
 .articles-list {
     display: flex;
     flex-wrap: wrap;
-    min-width: 300px
 }
